--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # wallpaper
 exec --no-startup-id nitrogen --restore
 # composer -- make smooth trantition
-exec_always compton -f
+exec_always --no-startup-id $HOME/.config/i3/picom.sh
 # POLYBAR startup
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
@@ -159,6 +159,16 @@ force_focus_wrapping yes
 
 # define gaps, using i3-gaps instead i3-wm
 gaps inner 7
+
+### I3bar -- currently using bumblebee-status ###
+# bar {
+# 	font pango:Inconsolata 10
+# 	position top
+# 	status_command ~/.config/i3/bumblebee-status/bumblebee-status \
+#     -m disk:root cpu memory pasource \
+# 	-p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
+# 	-t solarized-powerline
+# }
 
 ### WORKSPACE CONFIG ###
 # Define names for default workspaces for which we configure key bindings later on.
