--- a/i3/config
+++ b/i3/config
@@ -13,6 +13,8 @@ exec --no-startup-id nitrogen --restore
 exec_always --no-startup-id $HOME/.config/i3/picom.sh
 # POLYBAR startup
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+# auto Lockscreen
+exec_always --no-startup-id $HOME/.config/i3/autolock.sh
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
