--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,19 +1,25 @@
+live_config_reload: true
+
 window:
   dimensions:
     columns: 95
     lines: 30
 
   padding:
-    x: 5
-    y: 5
-  opacity: 0.98
+    x: 8
+    y: 8
+  opacity: 1
 
   # Values for `startup_mode`:
   #   - Windowed
   #   - Maximized
   #   - Fullscreen
   # startup_mode: Windowed
-  startup_mode: Fullscreen
+  startup_mode: Maximized
+
+  dynamic_padding: false
+
+  decorations: buttonless
 
   # Window title
   title: Alacritty
@@ -41,41 +47,39 @@ font:
   normal:
     # Font family
     #
-    family: JetBrains Mono Nerd Font
+    family: "FiraCode Nerd Font"
 
-    style: Bold
+    style: Regular
 
   # Point size
-  size: 9.5
+  size: 13.5
 
 # Generate automatic with Alacritty-themes
 colors:
   # Default colors
   primary:
-    # hard contrast: background = '#1d2021'
-    background: '#282828'
-    # soft contrast: background = '#32302f'
-    foreground: '#ebdbb2'
+    background: '#282a36'
+    foreground: '#eff0eb'
 
   # Normal colors
   normal:
-    black: '#282828'
-    red: '#cc241d'
-    green: '#98971a'
-    yellow: '#d79921'
-    blue: '#458588'
-    magenta: '#b16286'
-    cyan: '#689d6a'
-    white: '#a89984'
+    black: '#282a36'
+    red: '#ff5c57'
+    green: '#5af78e'
+    yellow: '#f3f99d'
+    blue: '#57c7ff'
+    magenta: '#ff6ac1'
+    cyan: '#9aedfe'
+    white: '#f1f1f0'
 
   # Bright colors
   bright:
-    black: '#928374'
-    red: '#fb4934'
-    green: '#b8bb26'
-    yellow: '#fabd2f'
-    blue: '#83a598'
-    magenta: '#d3869b'
-    cyan: '#8ec07c'
-    white: '#ebdbb2'
-theme: Gruvbox-Dark
+    black: '#686868'
+    red: '#ff5c57'
+    green: '#5af78e'
+    yellow: '#f3f99d'
+    blue: '#57c7ff'
+    magenta: '#ff6ac1'
+    cyan: '#9aedfe'
+    white: '#f1f1f0'
+theme: Snazzy
