--- a/alacritty.yml
+++ b/alacritty.yml
@@ -46,13 +46,13 @@ font:
   normal:
     # Font family
     #
-    family: "Iosevka Nerd Font"
+    family: "SFMono Nerd Font"
 
     style: Regular
 
   # Point size
-  size: 14
-  # size: 14
+  size: 13.5
+  # size: 24
 
 # Generate automatic with Alacritty-themes
 colors:
